# slicer_package_manager

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGES.rst  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  plugin.cmake  plugin.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.circleci/: config.yml
.github/workflows/: pre-commit.yml
docs/: Makefile  commands_shell.rst  concepts.rst  conf.py  developer_guide.rst  faq.rst  index.rst  installation.rst  make_a_release.rst  overview.rst  prerequisites.rst  python_client.rst  python_client_commands.rst  server.api.rst  server.models.rst  server.rst  slicer_package_manager.api.rst  slicer_package_manager_client.rst  user_faq.rst  user_guide.rst  web_python_client.python.rst  web_python_client.rst  web_python_client.shell.rst
docs/developer_guide/: develop.rst  index.rst  install.rst  overview.rst  slicer_package_manager.models.rst  slicer_package_manager.rst
plugin_tests/: s_e_m_test.py  s_p_m_test.py  utile.py
plugin_tests/data/: extension3.tar.gz.sha512  extension4.tar.gz.sha512  pkg2.exe.sha512
plugin_tests/python_client_tests/: .coverage  config.py  conftest.py  extractID.py  slicer_extension_manager_client_test.sh  slicer_package_manager_client_test.sh  test_client_cli.py  test_python_client.py
plugin_tests/python_client_tests/cassettes/: testCreateApp.yaml  testCreateAppCLI.yaml  testCreateRelease.yaml  testCreateReleaseCLI.yaml  testDeleteApp.yaml  testDeleteAppCLI.yaml  testDeleteDraftCLI.yaml  testDeleteDraftRelease.yaml  testDeleteExtension.yaml  testDeleteExtensionsCLI.yaml  testDeletePackage.yaml  testDeletePackagesCLI.yaml  testDeleteRelease.yaml  testDeleteReleaseCLI.yaml  testDownloadExtensionsCLI.yaml  testDownloadPackagesCLI.yaml  testListApp.yaml  testListAppCLI.yaml  testListApplicationPackage.yaml  testListDraftRelease.yaml  testListDraftReleaseWithLimit.yaml  testListDraftWithLimitCLI.yaml  testListExtension.yaml  testListExtensionsCLI.yaml  testListPackagesCLI.yaml  testListRelease.yaml  testListReleaseCLI.yaml  testUploadAndDownloadApplicationPackage.yaml  testUploadAndDownloadExtension.yaml  testUploadApplicationPackageWithBuildDate[invalid].yaml  testUploadApplicationPackageWithBuildDate[timezone].yaml  testUploadExtensionsCLI.yaml  testUploadPackagesCLI.yaml  testUploadPackagesWithBuildDateCLI[invalid].yaml  testUploadPackagesWithBuildDateCLI[timezone].yaml  testlistDraftCLI.yaml
provisioning/: Dockerfile  README.md  entrypoint.sh  init.yml
python_client/: LICENSE  README.rst  cleanNightly.sh  pyproject.toml  setup.py
python_client/slicer_extension_manager_client/: __init__.py  cli.py
python_client/slicer_package_manager_client/: __init__.py  __main__.py  cli.py
python_client/slicer_package_manager_client/_vendor/: README.rst
python_client/slicer_package_manager_client/_vendor/bson/: __init__.py  objectid.py
server/: __init__.py  constants.py  utilities.py  webroot.mako
server/api/: app.py
server/models/: extension.py  package.py
slicer_package_manager/: __init__.py  _version.py  constants.py  utilities.py
slicer_package_manager/api/: app.py
slicer_package_manager/models/: extension.py  package.py
tests/: __init__.py  conftest.py  test_load.py  test_slicer_package_manager.py
tests/data/: README.rst  extension1.tar.gz.sha512  extension2.tar.gz.sha512  extension5.tar.gz.sha512  pkg0.dmg.sha512  pkg2.tar.gz.sha512
web_client/: main.js  routes.js
web_client/templates/: configView.pug
web_client/views/: ConfigView.js
web_external/: app.js  main.js  router.js  routes.js
web_python_client/: README.rst  config.py  setup.py
web_python_client/slicer_extension_manager_client/: __init__.py  cli.py
